--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "source-processor",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Track the textual position of json elements within a text, and validate a json against a JSON schema, with colomn and row error reporting",
   "keywords": [
     "jquery-plugin"
   ],
   "homepage": "https://github.com/tomlarkworthy/source-processor",
-  "bugs": "https://github.com/firebase/source-processor/issues",
+  "bugs": "https://github.com/tomlarkworthy/source-processor/issues",
   "author": {
     "name": "Tom Larkworthy",
     "email": "tlarkworthy@firebase.com",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/firebase/source-processor"
+    "url": "https://github.com/tomlarkworthy/source-processor"
   },
   "scripts": {
     "prepublish": "grunt compile"
@@ -37,7 +37,6 @@
     "jshint-stylish": "~0.1.3",
     "load-grunt-tasks": "~0.2.0",
     "source-map-support": "0.2.7",
-    "time-grunt": "~0.1.0",
-    "typescript-tpm": "^0.1.7"
+    "time-grunt": "~0.1.0"
   }
 }
