--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,16 @@
 /node_modules/
 src/.jshintrc
-src/error.d.ts
-*.js.map
-src/source-processor.d.ts
+**.js.map
 .idea
 .editorconfig
 .jshintrc
+npm-debug.log
+
+src/error.d.ts
 src/util/Collections.d.ts
+src/source-processor.d.ts
+
+src/source-processor.js
+src/util/Collections.js
+test/parser_test.js
+src/error.js
